# T.I.A-Prototype

./: CMakeLists.txt  Dockerfile  main.cpp
templates/: controle.html  index.html  style.css
